--- a/_posts/2020-12-02-svg.md
+++ b/_posts/2020-12-02-svg.md
@@ -6,16 +6,6 @@ date:   2020-12-02
 img: /img/me.png
 ---
 
-{% if page.image %}
-  <figure class="post-thumbnail {% if page.image %}{% else %}no-image{% endif %}">
-    {% if page.k == true %}
-      <img src="{{ page.image }}" alt="{{ page.title }}">
-    {% else %}
-      <img src="{{ page.image | prepend: site.baseurl }}" alt="{{ page.title }}">
-    {% endif %}
-  </figure>
-{% endif %}
-
 Graphics and visuals is taking on the boom, because it is now equally important for any product in market to give functionality as well as look. And so is the importance of visuals and graphics content design is increasing. A lot of new job opportunities are being created. Now this sparks the curiosity in me as how such beautiful websites and products are created. So using a popular tool `figma`, I created a basic svg image.
 
-<img align ="center" src = "{{'/images/me.png' | prepend : site.baseurl}}">
+<img align ="center" src = "{{'/assets' | append : page.img| prepend: site.baseurl}}">
